[gd_scene load_steps=29 format=2]

[ext_resource path="res://ASSETS_SWING/Flying eye/Flying_Eye_sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Fying Eye.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Bite"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/HitArea:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "HitGround"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Launch"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Flying_Eye_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/HitArea:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Lauch_radar/LauchPoint:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack_radar/AttackPoint:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:is_launching")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Bite"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "HitGround"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Launch"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/Bite/node = SubResource( 8 )
states/Bite/position = Vector2( -610, -356.088 )
states/Die/node = SubResource( 9 )
states/Die/position = Vector2( -611.333, -12.0878 )
states/HitGround/node = SubResource( 10 )
states/HitGround/position = Vector2( -452.667, 67.9121 )
states/Hurt/node = SubResource( 11 )
states/Hurt/position = Vector2( -696.667, -105.421 )
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( -758.444, -206.754 )
states/Launch/node = SubResource( 13 )
states/Launch/position = Vector2( -311.333, -206.261 )
transitions = [ "Idle", "Bite", SubResource( 14 ), "Idle", "Launch", SubResource( 15 ), "Bite", "Idle", SubResource( 16 ), "Launch", "Idle", SubResource( 17 ), "Idle", "Hurt", SubResource( 18 ), "Hurt", "Die", SubResource( 19 ), "Die", "HitGround", SubResource( 20 ) ]
start_node = "Idle"
end_node = "HitGround"
graph_offset = Vector2( -909, -135.962 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 12, 10 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 178, 107.481 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 12, 10 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 2, 2 )

[node name="Fying Eye" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Flying_Eye_sheet" type="Sprite" parent="."]
position = Vector2( -4.94975, 0 )
texture = ExtResource( 1 )
hframes = 8
vframes = 6
frame = 38

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bite = SubResource( 2 )
anims/Die = SubResource( 3 )
anims/HitGround = SubResource( 4 )
anims/Hurt = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/Launch = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="HitArea" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 7, 2 )
shape = SubResource( 23 )
disabled = true

[node name="Radar" type="Area2D" parent="."]
collision_layer = 128

[node name="DetectionZone" type="CollisionShape2D" parent="Radar"]
position = Vector2( 0, 135.481 )
shape = SubResource( 24 )

[node name="Attack_radar" type="Area2D" parent="."]
collision_layer = 128

[node name="AttackPoint" type="CollisionShape2D" parent="Attack_radar"]
position = Vector2( 7, 2 )
rotation = 0.00434562
shape = SubResource( 25 )

[node name="Lauch_radar" type="Area2D" parent="."]
collision_layer = 128

[node name="LauchPoint" type="CollisionShape2D" parent="Lauch_radar"]
position = Vector2( 125, 0 )
rotation = -1.5708
shape = SubResource( 26 )
one_way_collision = true
one_way_collision_margin = 57.6

[node name="DeadAwait" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="Radar" to="." method="_on_Radar_body_entered"]
[connection signal="body_entered" from="Attack_radar" to="." method="_on_Attack_radar_body_entered"]
[connection signal="body_entered" from="Lauch_radar" to="." method="_on_Lauch_radar_body_entered"]
[connection signal="timeout" from="DeadAwait" to="." method="_on_DeadAwait_timeout"]
